# chess-transformer-project

./: main.py  pyproject.toml
code/: .gitignore  config.json  draw_game.ipynb  game_stats.ipynb  no-more-running.ipynb  pyproject.toml  training_args.py
paper/: .gitignore  citations.csv  main.bib  main.tex  main.xdv
resources/: params.tex
