[project]
name = "chess-transformer-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.5",
    "dotenv>=0.9.9",
    "huggingface-hub>=1.16.4",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "pip>=26.1.1",
    "polars>=1.41.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
]
