[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chess>=1.11.2",
    "datasets>=4.8.5",
    "dotenv>=0.9.9",
    "huggingface-hub>=1.15.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "python-dotenv>=1.2.2",
    "tokenizers>=0.22.2",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "zstandard>=0.25.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
